impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  late final _NERVA_UnsignedTransaction_paymentIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_UnsignedTransaction_paymentId');
  late final _NERVA_UnsignedTransaction_paymentId =
      _NERVA_UnsignedTransaction_paymentIdPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_UnsignedTransaction_recipientAddress(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _NERVA_UnsignedTransaction_recipientAddress(
      unsignedTx_ptr,
      separator,
    );
  }

  late final _NERVA_UnsignedTransaction_recipientAddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'NERVA_UnsignedTransaction_recipientAddress');
  late final _NERVA_UnsignedTransaction_recipientAddress =
      _NERVA_UnsignedTransaction_recipientAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int NERVA_UnsignedTransaction_txCount(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
  ) {
    return _NERVA_UnsignedTransaction_txCount(
      unsignedTx_ptr,
    );
  }

  late final _NERVA_UnsignedTransaction_txCountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_UnsignedTransaction_txCount');
  late final _NERVA_UnsignedTransaction_txCount =
      _NERVA_UnsignedTransaction_txCountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_UnsignedTransaction_sign(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> signedFileName,
  ) {
    return _NERVA_UnsignedTransaction_sign(
      unsignedTx_ptr,
      signedFileName,
    );
  }

  late final _NERVA_UnsignedTransaction_signPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_UnsignedTransaction_sign');
  late final _NERVA_UnsignedTransaction_sign =
      _NERVA_UnsignedTransaction_signPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int NERVA_TransactionInfo_direction(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_direction(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_directionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_direction');
  late final _NERVA_TransactionInfo_direction =
      _NERVA_TransactionInfo_directionPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_TransactionInfo_isPending(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_isPending(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_isPendingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_isPending');
  late final _NERVA_TransactionInfo_isPending =
      _NERVA_TransactionInfo_isPendingPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_TransactionInfo_isFailed(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_isFailed(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_isFailedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_isFailed');
  late final _NERVA_TransactionInfo_isFailed =
      _NERVA_TransactionInfo_isFailedPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_amount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_amount(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_amountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_amount');
  late final _NERVA_TransactionInfo_amount = _NERVA_TransactionInfo_amountPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_fee(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_fee(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_feePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_fee');
  late final _NERVA_TransactionInfo_fee = _NERVA_TransactionInfo_feePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_blockHeight(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_blockHeight(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_blockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_blockHeight');
  late final _NERVA_TransactionInfo_blockHeight =
      _NERVA_TransactionInfo_blockHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_TransactionInfo_subaddrIndex(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _NERVA_TransactionInfo_subaddrIndex(
      txInfo_ptr,
      separator,
    );
  }

  late final _NERVA_TransactionInfo_subaddrIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_TransactionInfo_subaddrIndex');
  late final _NERVA_TransactionInfo_subaddrIndex =
      _NERVA_TransactionInfo_subaddrIndexPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int NERVA_TransactionInfo_subaddrAccount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_subaddrAccount(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_subaddrAccountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_subaddrAccount');
  late final _NERVA_TransactionInfo_subaddrAccount =
      _NERVA_TransactionInfo_subaddrAccountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_TransactionInfo_label(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_label(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_TransactionInfo_label');
  late final _NERVA_TransactionInfo_label = _NERVA_TransactionInfo_labelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_confirmations(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_confirmations(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_confirmationsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_confirmations');
  late final _NERVA_TransactionInfo_confirmations =
      _NERVA_TransactionInfo_confirmationsPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_unlockTime(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_unlockTime(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_unlockTimePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_unlockTime');
  late final _NERVA_TransactionInfo_unlockTime =
      _NERVA_TransactionInfo_unlockTimePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_TransactionInfo_hash(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_hash(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_hashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_TransactionInfo_hash');
  late final _NERVA_TransactionInfo_hash = _NERVA_TransactionInfo_hashPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_timestamp(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_timestamp(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_timestampPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_timestamp');
  late final _NERVA_TransactionInfo_timestamp =
      _NERVA_TransactionInfo_timestampPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_TransactionInfo_paymentId(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_paymentId(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_paymentIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_TransactionInfo_paymentId');
  late final _NERVA_TransactionInfo_paymentId =
      _NERVA_TransactionInfo_paymentIdPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_transfers_count(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _NERVA_TransactionInfo_transfers_count(
      txInfo_ptr,
    );
  }

  late final _NERVA_TransactionInfo_transfers_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionInfo_transfers_count');
  late final _NERVA_TransactionInfo_transfers_count =
      _NERVA_TransactionInfo_transfers_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_TransactionInfo_transfers_amount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    int index,
  ) {
    return _NERVA_TransactionInfo_transfers_amount(
      txInfo_ptr,
      index,
    );
  }

  late final _NERVA_TransactionInfo_transfers_amountPtr = _lookup<
          ffi
          .NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'NERVA_TransactionInfo_transfers_amount');
  late final _NERVA_TransactionInfo_transfers_amount =
      _NERVA_TransactionInfo_transfers_amountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Char> NERVA_TransactionInfo_transfers_address(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    int address,
  ) {
    return _NERVA_TransactionInfo_transfers_address(
      txInfo_ptr,
      address,
    );
  }

  late final _NERVA_TransactionInfo_transfers_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('NERVA_TransactionInfo_transfers_address');
  late final _NERVA_TransactionInfo_transfers_address =
      _NERVA_TransactionInfo_transfers_addressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int)>();

  int NERVA_TransactionHistory_count(
    ffi.Pointer<ffi.Void> txHistory_ptr,
  ) {
    return _NERVA_TransactionHistory_count(
      txHistory_ptr,
    );
  }

  late final _NERVA_TransactionHistory_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionHistory_count');
  late final _NERVA_TransactionHistory_count =
      _NERVA_TransactionHistory_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> NERVA_TransactionHistory_transaction(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    int index,
  ) {
    return _NERVA_TransactionHistory_transaction(
      txHistory_ptr,
      index,
    );
  }
